--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.32.11",
+        "sass": "^1.85.0",
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@mdi/js": "^7.4.47",
+        "@mdi/react": "^1.6.1",
+        "react-icon": "^1.0.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^6.29.0"
     }
 }
